[package]
name = "newdb-rust-vue-gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "newdb_rust_vue_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
libloading = "0.8"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
